k8s/apps/default/qbittorrent/envoy/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-envoy
  labels:
    app: qbittorrent-envoy
spec:
  type: ClusterIP
  selector:
    app: qbittorrent-envoy
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: bt-tcp
      port: 50413
      protocol: TCP
      targetPort: 50413
    - name: bt-udp
      port: 50413
      protocol: UDP
      targetPort: 50413
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-envoy-metrics
  labels:
    app.kubernetes.io/component: envoy-metrics
spec:
  type: ClusterIP
  selector:
    app: qbittorrent-envoy
  ports:
    - name: metrics
      port: 9901
      protocol: TCP
      targetPort: 9901
