k8s/apps/default/qbittorrent/envoy/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-envoy
spec:
  hostnames:
    - qbit-envoy.cbannister.xyz
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: qbittorrent-envoy
          port: 80
